--- a/style.css
+++ b/style.css
@@ -2048,7 +2048,7 @@ html, body {
 .notification-dropdown {
   position: absolute;
   top: calc(100% + 8px);
-  right: 0;
+  right: -20px;
   width: 300px;
   max-height: 400px;
   background: var(--sidebar-bg);
